--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="d-flex align-items-end" style="width:100%;height:80vh;">
             <div class="row d-flex">
                 <div class="col">
-                    <h1 data-aos="flip-up" data-aos-duration="800" data-aos-delay="300" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:90px;padding-left:34px;">N i e r i c &nbsp; J a v i n a l</h1>
+                    <h1 data-aos="flip-up" data-aos-duration="800" data-aos-delay="300" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:90px;padding-left:34px;height:100%;width:100%;">N i e r i c &nbsp; J a v i n a l</h1>
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
     <section id="about" style="background-color:#4e4e4e;">
         <div>
             <div class="row" style="margin-right:0px;margin-left:0px;">
-                <div class="col-lg-4" data-aos="fade-right" data-aos-duration="900" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="100%"></div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-duration="900" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="100%"></div>
                 <div class="col-xl-8 border-custom" style="padding-right:0;padding-left:0;">
                     <div class="row" data-aos="fade" data-aos-duration="900" style="margin-left:0px;margin-right:0px;">
                         <div class="col" style="padding-right:0px;padding-left:0px;">
@@ -61,9 +61,9 @@
     <section id="projects" style="margin-bottom:50px;">
         <div class="row" style="margin-right:0px;margin-left:0px;">
             <div class="col" style="padding-right:0px;padding-left:0px;">
-                <h1 data-aos="flip-up" data-aos-duration="900" data-aos-once="true" class="text-center" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:90px;padding-top:3%;">Projects</h1>
-                <div class="container">
-                    <div class="card-group" data-aos="fade-up" data-aos-duration="900" style="margin-top:50px;">
+                <div class="container" style="width:100%;">
+                    <h1 data-aos="flip-up" data-aos-duration="900" data-aos-once="true" class="text-center" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:90px;padding-top:3%;width:100%;">Projects</h1>
+                    <div class="card-group" data-aos="fade-up" data-aos-duration="900" style="margin-top:50px;width:100%;">
                         <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/business-code-coding-270360.jpg">
                             <div class="card-body">
                                 <h4 class="card-title">Bloggy</h4>
