--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <h1 style="color:rgb(255,255,255);padding-left:18px;font-family:Montserrat, sans-serif;font-weight:bold;">Skills:</h1>
                         </div>
                     </div>
-                    <div class="row" data-aos="fade" data-aos-duration="900" style="margin-right:auto;margin-left:auto;">
+                    <div class="row" data-aos="fade" data-aos-duration="900" style="margin-right:auto;margin-left:auto;margin-top:15px;margin-bottom:15px;">
                         <div class="col-xl-2 offset-xl-3" style="margin-bottom: ;"><img src="assets/img/Laravel-four-icon.png" height="100px" class="img-custom"></div>
                         <div class="col-xl-2"><img src="assets/img/django-neg.sh-600x600.png" height="100px"></div>
                         <div class="col-xl-2"><img src="assets/img/JAPSfAbP3BFt6TW_O-WrWrBat15Zbun6.png" height="100px"></div>
@@ -86,7 +86,7 @@
     </section>
     <section id="contact" style="background-color:#7b7b7b;">
         <div class="row" style="margin-right:0;margin-left:0;">
-            <div class="col-xl-8 offset-xl-0" style="font-size:30px;color:rgb(255,255,255);font-family:Lato, sans-serif;">
+            <div class="col-xl-8 offset-xl-0" data-aos="fade" data-aos-duration="900" style="font-size:30px;color:rgb(255,255,255);font-family:Lato, sans-serif;">
                 <p style="margin-top:50px;">Gmail : nieric93@gmail.com</p>
                 <p>Github:&nbsp;https://github.com/nerohawb</p>
                 <p style="margin-bottom:50px;">https://www.linkedin.com/in/nieric-javinal-06868115a/</p>
