--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <section id="about" style="background-color:#4e4e4e;">
         <div>
             <div class="row" style="margin-right:0px;margin-left:0px;">
-                <div class="col-lg-4" data-aos="fade-up" data-aos-duration="900" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="100%"></div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-duration="900" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="100%" height="100%"></div>
                 <div class="col-xl-8 border-custom" style="padding-right:0;padding-left:0;">
                     <div class="row" data-aos="fade" data-aos-duration="900" style="margin-left:0px;margin-right:0px;">
                         <div class="col" style="padding-right:0px;padding-left:0px;">
                             <h1 style="color:rgb(255,255,255);font-family:Montserrat, sans-serif;font-size:80px;padding-top:40px;padding-left:18px;font-weight:bold;">Hello, World!</h1>
-                            <p style="color:rgb(255,255,255);font-size:30px;margin-bottom:0;padding-left:18px;font-family:Lato, sans-serif;width:80%;">I'm Nieric Javinal, the creator of this website. I'm a Full Stack Web Developer and a Full Stack Ionic App Developer.<br></p>
-                            <h1 style="color:rgb(255,255,255);padding-left:18px;font-family:Montserrat, sans-serif;font-weight:bold;">Skills:</h1>
+                            <p style="color:rgb(255,255,255);font-size:22px;margin-bottom:0;padding-left:18px;font-family:Lato, sans-serif;width:80%;">I'm Nieric Javinal, the creator of this website. I'm a Full Stack Web Developer and a Full Stack Ionic App Developer.<br></p>
+                            <h1 style="color:rgb(255,255,255);padding-left:18px;font-family:Montserrat, sans-serif;font-weight:bold;padding-top:5px;">Skills:</h1>
                         </div>
                     </div>
                     <div class="row" data-aos="fade" data-aos-duration="900" style="margin-right:auto;margin-left:auto;margin-top:15px;margin-bottom:15px;">
