--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
@@ -16,43 +18,47 @@
 </head>
 
 <body>
-    <section id="header" style="height:100vh;width:100%;">
+    <section id="header" style="height:100vh;width:100%;background-color:#202020;">
         <nav class="navbar navbar-light navbar-expand-md" data-aos="slide-down" data-aos-duration="550" data-aos-once="true">
-            <div class="container-fluid"><a class="navbar-brand" href="#" style="font-size:32px;font-family:Lato, sans-serif;">N J</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container-fluid"><a class="navbar-brand" href="#" style="font-size:32px;font-family:Lato, sans-serif;color:rgba(255,255,255,0.9);"><img src="assets/img/logo-profile-h.svg" width="250"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav" style="margin-left:auto;font-size:22px;font-family:Lato, sans-serif;">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#">&nbsp;About&nbsp;</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">&nbsp;Projects</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">&nbsp;Contact</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#" style="color:#FAFAFA;">&nbsp;About&nbsp;</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color:rgba(255,255,255,0.5);">&nbsp;Projects</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color:rgba(255,255,255,0.5);">&nbsp;Contact</a></li>
                     </ul>
             </div>
             </div>
         </nav>
-        <div class="d-flex align-items-end" style="width:100%;height:80vh;">
-            <div class="row d-flex">
+        <div class="d-flex justify-content-start align-items-end container" style="width:100%;height:80vh;padding-bottom:55px;">
+            <div class="row" style="border-left:white solid 3px;padding-left:20px;">
                 <div class="col">
-                    <h1 data-aos="flip-up" data-aos-duration="800" data-aos-delay="300" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:90px;padding-left:34px;height:100%;width:100%;">N i e r i c &nbsp; J a v i n a l</h1>
+                    <h1 data-aos="fade-right" data-aos-duration="800" data-aos-delay="150" style="color:#FAFAFA;font-size:125px;font-family:'Open Sans', sans-serif;font-weight:normal;">Nieric</h1>
+                    <h1 data-aos="fade-right" data-aos-duration="800" data-aos-delay="250" style="color:#FAFAFA;font-size:95px;font-family:'Open Sans', sans-serif;font-weight:normal;">Javinal</h1>
+                    <h1 data-aos="fade-right" data-aos-delay="350" style="color:#FAFAFA;font-size:31px;font-family:'Open Sans', sans-serif;font-weight:normal;margin-top:16px;">Full Stack Web Developer | Full Stack Mobile App Developer</h1>
                 </div>
             </div>
         </div>
     </section>
-    <section id="about" style="background-color:#4e4e4e;">
+    <section id="about" style="background-color:#202020;width:100%;height:100vh;padding-top:5%;padding-left:5%;">
         <div>
             <div class="row" style="margin-right:0px;margin-left:0px;">
-                <div class="col-lg-4" data-aos="fade-up" data-aos-duration="900" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="100%" height="100%"></div>
-                <div class="col-xl-8 border-custom" style="padding-right:0;padding-left:0;">
-                    <div class="row" data-aos="fade" data-aos-duration="900" style="margin-left:0px;margin-right:0px;">
-                        <div class="col" style="padding-right:0px;padding-left:0px;">
-                            <h1 style="color:rgb(255,255,255);font-family:Montserrat, sans-serif;font-size:80px;padding-top:40px;padding-left:18px;font-weight:bold;">Hello, World!</h1>
-                            <p style="color:rgb(255,255,255);font-size:22px;margin-bottom:0;padding-left:18px;font-family:Lato, sans-serif;width:80%;">I'm Nieric Javinal, the creator of this website. I'm a Full Stack Web Developer and a Full Stack Ionic App Developer.<br></p>
-                            <h1 style="color:rgb(255,255,255);padding-left:18px;font-family:Montserrat, sans-serif;font-weight:bold;padding-top:5px;">Skills:</h1>
+                <div class="col-lg-4" style="padding-left:0;"><img class="img-fluid" src="assets/img/1x1-resume.png" width="500px" data-aos="slide-left" data-aos-duration="800" data-aos-delay="150" style="filter:grayscale(80%);z-index:999;padding-top:10%;margin-left:31%;"></div>
+                <div class="col-xl-8 border-custom">
+                    <div style="background-color:#323232;width:80%;padding:25px;">
+                        <div class="row" style="margin-left:0px;margin-right:0px;">
+                            <div class="col" style="padding-right:0px;padding-left:0px;">
+                                <h1 style="color:#FAFAFA;font-family:Montserrat, sans-serif;font-size:80px;padding-left:18px;font-weight:bold;">Hello, World!</h1>
+                                <p style="color:#FAFAFA;font-size:22px;padding-left:18px;font-family:Lato, sans-serif;width:80%;">I'm Nieric Javinal, the creator of this website. I'm a Full Stack Web Developer and a Full Stack Ionic App Developer.<br></p>
+                                <h1 style="color:#FAFAFA;padding-left:18px;font-family:Montserrat, sans-serif;font-weight:bold;padding-top:5px;">Skills:</h1>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row" data-aos="fade" data-aos-duration="900" style="margin-right:auto;margin-left:auto;margin-top:15px;margin-bottom:15px;">
-                        <div class="col-xl-2 offset-xl-3" style="margin-bottom: ;"><img src="assets/img/Laravel-four-icon.png" height="100px" class="img-custom"></div>
-                        <div class="col-xl-2"><img src="assets/img/django-neg.sh-600x600.png" height="100px"></div>
-                        <div class="col-xl-2"><img src="assets/img/JAPSfAbP3BFt6TW_O-WrWrBat15Zbun6.png" height="100px"></div>
+                        <div class="row" style="margin-right:auto;margin-left:auto;margin-top:15px;margin-bottom:15px;">
+                            <div class="col-xl-3 offset-xl-2"><img src="assets/img/Laravel-four-icon.png" height="100px" class="img-custom"></div>
+                            <div class="col-xl-3"><img src="assets/img/django-neg.sh-600x600.png" height="100px"></div>
+                            <div class="col-xl-3"><img src="assets/img/JAPSfAbP3BFt6TW_O-WrWrBat15Zbun6.png" height="100px"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -84,7 +90,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" style="background-color:#7b7b7b;">
+    <section id="contact" style="background-color:#202020;">
         <div class="row" style="margin-right:0;margin-left:0;">
             <div class="col-xl-8 offset-xl-0" data-aos="fade" data-aos-duration="900" style="font-size:30px;color:rgb(255,255,255);font-family:Lato, sans-serif;">
                 <p style="margin-top:50px;">Gmail : nieric93@gmail.com</p>
@@ -92,7 +98,7 @@
                 <p style="margin-bottom:50px;">https://www.linkedin.com/in/nieric-javinal-06868115a/</p>
             </div>
             <div class="col-xl-4 d-flex align-items-end border-custom">
-                <h1 data-aos="fade" class="text-center" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:72px;padding-top:3%;color:rgb(255,255,255);">Contacts</h1>
+                <h1 class="text-center" style="font-family:Montserrat, sans-serif;font-weight:bold;font-size:72px;padding-top:3%;color:rgb(255,255,255);">Contacts</h1>
             </div>
         </div>
     </section>
